RESOLVED FIXED314176
Multiple files include CookieStorage.h but don't use it
https://bugs.webkit.org/show_bug.cgi?id=314176
Summary Multiple files include CookieStorage.h but don't use it
rupin
Reported 2026-05-05 23:53:31 PDT
Remove unused includes of CookieStorage.h
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-05 23:53:37 PDT
rupin
Comment 2 2026-05-05 23:56:05 PDT
EWS
Comment 3 2026-05-06 10:36:42 PDT
Committed 312714@main (4a0d77c0a458): <https://commits.webkit.org/312714@main> Reviewed commits have been landed. Closing PR #64348 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.