Multiple files include CookieStorage.h but don't use it https://bugs.webkit.org/show_bug.cgi?id=314176 rdar://176337336

Reviewed by Per Arne Vollan.

We can remove these includes because they're not used.

* Source/WebCore/page/SettingsBase.cpp:
* Source/WebCore/platform/network/cocoa/ResourceHandleCocoa.mm:
* Source/WebKit/UIProcess/API/APIHTTPCookieStore.cpp:

Canonical link: https://commits.webkit.org/312714@main